--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.14",
     "antd": "^4.16.13",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
